filter out conflicting mimetypes if extension mimetype isn't null